tests/dataset/tpc-h/compiler/cpp/q18.cpp
// Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
#include <algorithm>
#include <iostream>
#include <map>
#include <numeric>
#include <string>
#include <unordered_map>
#include <utility>
#include <vector>

template <typename T> void __json(const T &);
inline void __json(int v) { std::cout << v; }
inline void __json(double v) { std::cout << v; }
inline void __json(bool v) { std::cout << (v ? "true" : "false"); }
inline void __json(const std::string &v) { std::cout << "\"" << v << "\""; }
inline void __json(const char *v) { std::cout << "\"" << v << "\""; }
template <typename T> void __json(const std::vector<T> &v) {
  std::cout << "[";
  bool first = true;
  for (const auto &x : v) {
    if (!first)
      std::cout << ",";
    first = false;
    __json(x);
  }
  std::cout << "]";
}
template <typename K, typename V> void __json(const std::map<K, V> &m) {
  std::cout << "{";
  bool first = true;
  for (const auto &kv : m) {
    if (!first)
      std::cout << ",";
    first = false;
    __json(kv.first);
    std::cout << ":";
    __json(kv.second);
  }
  std::cout << "}";
}
template <typename K, typename V>
void __json(const std::unordered_map<K, V> &m) {
  std::cout << "{";
  bool first = true;
  for (const auto &kv : m) {
    if (!first)
      std::cout << ",";
    first = false;
    __json(kv.first);
    std::cout << ":";
    __json(kv.second);
  }
  std::cout << "}";
}

struct Nation {
  decltype(1) n_nationkey;
  decltype(std::string("GERMANY")) n_name;
};
struct Customer {
  decltype(1) c_custkey;
  decltype(std::string("Alice")) c_name;
  decltype(1000) c_acctbal;
  decltype(1) c_nationkey;
  decltype(std::string("123 Market St")) c_address;
  decltype(std::string("123-456")) c_phone;
  decltype(std::string("Premium client")) c_comment;
};
struct Order {
  decltype(100) o_orderkey;
  decltype(1) o_custkey;
};
struct Lineitem {
  decltype(100) l_orderkey;
  decltype(150) l_quantity;
  decltype(1000) l_extendedprice;
  decltype(0.1) l_discount;
};
struct Result {
  decltype(c.c_name) c_name;
  decltype(c.c_custkey) c_custkey;
  decltype(c.c_acctbal) c_acctbal;
  decltype(c.c_address) c_address;
  decltype(c.c_phone) c_phone;
  decltype(c.c_comment) c_comment;
  decltype(n.n_name) n_name;
};
struct __struct6 {
  decltype(c) c;
  decltype(o) o;
  decltype(l) l;
  decltype(n) n;
};
struct __struct7 {
  Result key;
  std::vector<__struct6> items;
};
struct __struct8 {
  decltype(std::declval<__struct7>().key.c_name) c_name;
  decltype(std::declval<__struct7>().key.c_custkey) c_custkey;
  double revenue;
  decltype(std::declval<__struct7>().key.c_acctbal) c_acctbal;
  decltype(std::declval<__struct7>().key.n_name) n_name;
  decltype(std::declval<__struct7>().key.c_address) c_address;
  decltype(std::declval<__struct7>().key.c_phone) c_phone;
  decltype(std::declval<__struct7>().key.c_comment) c_comment;
};
inline void __json(const Customer &v) {
  bool first = true;
  std::cout << "{";
  if (!first)
    std::cout << ",";
  first = false;
  std::cout << "\"c_custkey\":";
  __json(v.c_custkey);
  if (!first)
    std::cout << ",";
  first = false;
  std::cout << "\"c_name\":";
  __json(v.c_name);
  if (!first)
    std::cout << ",";
  first = false;
  std::cout << "\"c_acctbal\":";
  __json(v.c_acctbal);
  if (!first)
    std::cout << ",";
  first = false;
  std::cout << "\"c_nationkey\":";
  __json(v.c_nationkey);
  if (!first)
    std::cout << ",";
  first = false;
  std::cout << "\"c_address\":";
  __json(v.c_address);
  if (!first)
    std::cout << ",";
  first = false;
  std::cout << "\"c_phone\":";
  __json(v.c_phone);
  if (!first)
    std::cout << ",";
  first = false;
  std::cout << "\"c_comment\":";
  __json(v.c_comment);
  std::cout << "}";
}
inline void __json(const Result &v) {
  bool first = true;
  std::cout << "{";
  if (!first)
    std::cout << ",";
  first = false;
  std::cout << "\"c_name\":";
  __json(v.c_name);
  if (!first)
    std::cout << ",";
  first = false;
  std::cout << "\"c_custkey\":";
  __json(v.c_custkey);
  if (!first)
    std::cout << ",";
  first = false;
  std::cout << "\"c_acctbal\":";
  __json(v.c_acctbal);
  if (!first)
    std::cout << ",";
  first = false;
  std::cout << "\"c_address\":";
  __json(v.c_address);
  if (!first)
    std::cout << ",";
  first = false;
  std::cout << "\"c_phone\":";
  __json(v.c_phone);
  if (!first)
    std::cout << ",";
  first = false;
  std::cout << "\"c_comment\":";
  __json(v.c_comment);
  if (!first)
    std::cout << ",";
  first = false;
  std::cout << "\"n_name\":";
  __json(v.n_name);
  std::cout << "}";
}
inline void __json(const __struct8 &v) {
  bool first = true;
  std::cout << "{";
  if (!first)
    std::cout << ",";
  first = false;
  std::cout << "\"c_name\":";
  __json(v.c_name);
  if (!first)
    std::cout << ",";
  first = false;
  std::cout << "\"c_custkey\":";
  __json(v.c_custkey);
  if (!first)
    std::cout << ",";
  first = false;
  std::cout << "\"revenue\":";
  __json(v.revenue);
  if (!first)
    std::cout << ",";
  first = false;
  std::cout << "\"c_acctbal\":";
  __json(v.c_acctbal);
  if (!first)
    std::cout << ",";
  first = false;
  std::cout << "\"n_name\":";
  __json(v.n_name);
  if (!first)
    std::cout << ",";
  first = false;
  std::cout << "\"c_address\":";
  __json(v.c_address);
  if (!first)
    std::cout << ",";
  first = false;
  std::cout << "\"c_phone\":";
  __json(v.c_phone);
  if (!first)
    std::cout << ",";
  first = false;
  std::cout << "\"c_comment\":";
  __json(v.c_comment);
  std::cout << "}";
}
inline void __json(const Lineitem &v) {
  bool first = true;
  std::cout << "{";
  if (!first)
    std::cout << ",";
  first = false;
  std::cout << "\"l_orderkey\":";
  __json(v.l_orderkey);
  if (!first)
    std::cout << ",";
  first = false;
  std::cout << "\"l_quantity\":";
  __json(v.l_quantity);
  if (!first)
    std::cout << ",";
  first = false;
  std::cout << "\"l_extendedprice\":";
  __json(v.l_extendedprice);
  if (!first)
    std::cout << ",";
  first = false;
  std::cout << "\"l_discount\":";
  __json(v.l_discount);
  std::cout << "}";
}
inline void __json(const Nation &v) {
  bool first = true;
  std::cout << "{";
  if (!first)
    std::cout << ",";
  first = false;
  std::cout << "\"n_nationkey\":";
  __json(v.n_nationkey);
  if (!first)
    std::cout << ",";
  first = false;
  std::cout << "\"n_name\":";
  __json(v.n_name);
  std::cout << "}";
}
inline void __json(const Order &v) {
  bool first = true;
  std::cout << "{";
  if (!first)
    std::cout << ",";
  first = false;
  std::cout << "\"o_orderkey\":";
  __json(v.o_orderkey);
  if (!first)
    std::cout << ",";
  first = false;
  std::cout << "\"o_custkey\":";
  __json(v.o_custkey);
  std::cout << "}";
}
inline void __json(const __struct6 &v) {
  bool first = true;
  std::cout << "{";
  if (!first)
    std::cout << ",";
  first = false;
  std::cout << "\"c\":";
  __json(v.c);
  if (!first)
    std::cout << ",";
  first = false;
  std::cout << "\"o\":";
  __json(v.o);
  if (!first)
    std::cout << ",";
  first = false;
  std::cout << "\"l\":";
  __json(v.l);
  if (!first)
    std::cout << ",";
  first = false;
  std::cout << "\"n\":";
  __json(v.n);
  std::cout << "}";
}
int main() {
  std::vector<Nation> nation = {Nation{1, std::string("GERMANY")}};
  std::vector<Customer> customer = {
      Customer{1, std::string("Alice"), 1000, 1, std::string("123 Market St"),
               std::string("123-456"), std::string("Premium client")},
      Customer{2, std::string("Bob"), 200, 1, std::string("456 Side St"),
               std::string("987-654"), std::string("Frequent returns")}};
  std::vector<Order> orders = {Order{100, 1}, Order{200, 1}, Order{300, 2}};
  std::vector<Lineitem> lineitem = {Lineitem{100, 150, 1000, 0.1},
                                    Lineitem{200, 100, 800, 0},
                                    Lineitem{300, 30, 300, 0.05}};
  auto threshold = 200;
  std::vector<__struct6> result = ([&]() {
    std::vector<__struct7> __groups;
    for (auto c : customer) {
      for (auto o : orders) {
        if (!((o.o_custkey == c.c_custkey)))
          continue;
        for (auto l : lineitem) {
          if (!((l.l_orderkey == o.o_orderkey)))
            continue;
          for (auto n : nation) {
            if (!((n.n_nationkey == c.c_nationkey)))
              continue;
            auto __key =
                Result{c.c_name,  c.c_custkey, c.c_acctbal, c.c_address,
                       c.c_phone, c.c_comment, n.n_name};
            bool __found = false;
            for (auto &__g : __groups) {
              if (__g.key == __key) {
                __g.items.push_back(__struct6{c, o, l, n});
                __found = true;
                break;
              }
            }
            if (!__found) {
              __groups.push_back(__struct7{
                  __key, std::vector<__struct6>{__struct6{c, o, l, n}}});
            }
          }
        }
      }
    }
    std::vector<std::pair<double, __struct8>> __items;
    for (auto &g : __groups) {
      if (!((([&](auto v) { return std::accumulate(v.begin(), v.end(), 0.0); })(
                 ([&]() {
                   std::vector<decltype(std::declval<__struct6>().l.l_quantity)>
                       __items;
                   for (auto x : g.items) {
                     __items.push_back(x.l.l_quantity);
                   }
                   return __items;
                 })()) > threshold)))
        continue;
      __items.push_back(
          {(-([&](auto v) { return std::accumulate(v.begin(), v.end(), 0.0); })(
               ([&]() {
                 std::vector<decltype((
                     std::declval<__struct6>().l.l_extendedprice *
                     ((1 - std::declval<__struct6>().l.l_discount))))>
                     __items;
                 for (auto x : g.items) {
                   __items.push_back(
                       (x.l.l_extendedprice * ((1 - x.l.l_discount))));
                 }
                 return __items;
               })())),
           __struct8{g.key.c_name, g.key.c_custkey, ([&](auto v) {
                       return std::accumulate(v.begin(), v.end(), 0.0);
                     })(([&]() {
                       std::vector<decltype((
                           std::declval<__struct6>().l.l_extendedprice *
                           ((1 - std::declval<__struct6>().l.l_discount))))>
                           __items;
                       for (auto x : g.items) {
                         __items.push_back(
                             (x.l.l_extendedprice * ((1 - x.l.l_discount))));
                       }
                       return __items;
                     })()),
                     g.key.c_acctbal, g.key.n_name, g.key.c_address,
                     g.key.c_phone, g.key.c_comment}});
    }
    std::sort(__items.begin(), __items.end(),
              [](auto &a, auto &b) { return a.first < b.first; });
    std::vector<__struct8> __res;
    for (auto &p : __items)
      __res.push_back(p.second);
    return __res;
  })();
  (__json(result));
  // test Q18 returns large-volume customers with total quantity > 200
  return 0;
}
